# pocl

./: CMakeLists.txt  README.packaging  config.h.in.cmake
doc/sphinx/source/: cuda.rst  development.rst  install.rst  using.rst
lib/CL/: clGetPlatformInfo.c  pocl_llvm_build.cc
lib/CL/devices/: CMakeLists.txt  devices.c
lib/CL/devices/neuromatrix/: CMakeLists.txt  neuromatrix.c  neuromatrix.h
lib/kernel/neuromatrix/: CMakeLists.txt
lib/llvmopencl/: ParallelRegion.cc
